# SSAT

./: Doxyfile.prj  README.md  doxygen-bash.sed  ssat-api.sh  ssat.sh
debian/: changelog  control  copyright  rules  ssat.install
exampleCase/group1A/: runTest.sh
exampleCase/group2A/: runTest.sh
exampleCase/gstTestBackground/: runTest.sh
packaging/: ssat.spec
util/: bmp2png.c  meson.build
